# c_cpp_operate

./: .editorconfig  .gitattributes  .gitignore
10_share_memory/: README.md
10_share_memory/POSIX/read_first/: loop_posix_read.cpp  posix_read.cpp  posix_write.c
10_share_memory/POSIX/write_first/: posix_read.cpp  posix_write.c
10_share_memory/System-V/: receiver.cpp  sender.c
11_ini_config/: CMakeLists.txt  ini_test.c
11_ini_config/config/: systemCfg.ini
11_ini_config/ini/: api.cmake  ini_wrapper.c
11_ini_config/libini/: README.md
1_stitch_path/: README
1_stitch_path/include/: stitch_path.hpp
1_stitch_path/src/: stitch_path.cpp
2_params/: README  params_ini_example  params_json_example
2_params/config/params/: params  params-1  params-2
2_params/include/: params_ini.hpp
2_params/src/: params.cpp  params_json.cpp
3_CMakeList/: CMakeLists.txt  README.md  controller.properties
3_CMakeList/include/: params.hpp
3_CMakeList/src/: params_ini.cpp
4_CMake_CROSS_COMPILE/: CMakeLists.txt  README.md
5_CMake_lib/: CMakeLists.txt  README.md
5_CMake_lib/src/onenet_test/: onenet.c
6_Thread/: CMakeLists.txt  README.md
6_Thread/src/: thread_create.cpp  thread_message.cpp  thread_pool.cpp  thread_queue.cpp
7_exception/: CMakeLists.txt  README.md
7_exception/include/: Error.hpp  ErrorCodes.hpp
7_exception/src/: exception.cpp  try_catch.cpp
8_log/: CMakeLists.txt  README.md  basic.txt
8_log/src/: custom.cpp  spdlog.cpp  spdlog_file.cpp  spdlog_rollback.cpp
9_DRM_LubanCat/: CMakeLists.txt  README.md
9_DRM_LubanCat/RGA_1/: CMakeLists.txt
9_DRM_LubanCat/RGA_1/drm_stitch/: drm-core.c  drm_driver.cc  drm_stitch.cc
9_DRM_LubanCat/RGA_1/include/display/: drm_stitch.hh
9_DRM_LubanCat/RGA_2_without_driver/: CMakeLists.txt
9_DRM_LubanCat/RGA_2_without_driver/include/display/: drm_stitch.hh
9_DRM_LubanCat/RGA_2_without_driver/src/display/drm_driver/: drm_driver.cc
9_DRM_LubanCat/RGA_2_without_driver/src/display/drm_stitch/: drm-core.c  drm_stitch.cc
9_DRM_LubanCat/RGA_2_without_driver/src/test/: 5_modeset-atomic-crtc.c  6_modeset-atomic-plane.c  libdrm_plane.c  libdrm_test.c
9_DRM_LubanCat/RGA_3_without_draw/: CMakeLists.txt
9_DRM_LubanCat/RGA_3_without_draw/include/display/: drm-core.h
9_DRM_LubanCat/RGA_3_without_draw/include/display/drm_stitch/: drm_stitch.hh
9_DRM_LubanCat/RGA_3_without_draw/src/display/drm_stitch/: drm-core.c  drm_stitch.cc
9_DRM_LubanCat/RGA_4_stitch_interface/: CMakeLists.txt
9_DRM_LubanCat/RGA_4_stitch_interface/include/display/drm_stitch/: drm-core.h  drm_stitch.h
9_DRM_LubanCat/RGA_4_stitch_interface/src/display/drm_driver/: drm_driver.cc
9_DRM_LubanCat/RGA_4_stitch_interface/src/display/drm_stitch/: drm_stitch.cc
9_DRM_LubanCat/RGA_5_ptr/: README.md
9_DRM_LubanCat/RGA_5_ptr/include/display/drm_driver/: drm_driver.hh
9_DRM_LubanCat/RGA_5_ptr/include/display/drm_stitch/: drm_stitch.h
9_DRM_LubanCat/RGA_5_ptr/src/display/drm_stitch/: drm-core.c  drm_stitch.cc
9_DRM_LubanCat/RGA_5_ptr/src/test/: 3_modeset-page-flip.c  modeset-atomic.c
9_DRM_LubanCat/RGA_5_ptr/src/test/test_pic/: main.c
9_DRM_LubanCat/RGA_6_try_ctach/include/display/drm_driver/: drm-core.h
9_DRM_LubanCat/RGA_6_try_ctach/include/display/drm_stitch/: drm_stitch.h
9_DRM_LubanCat/RGA_6_try_ctach/src/display/drm_driver/: drm-core.c
9_DRM_LubanCat/RGA_6_try_ctach/src/display/drm_stitch/: drm_stitch.cc
9_DRM_LubanCat/RGA_6_try_ctach/src/test/: 1_modeset-single-buffer.c  modeset-vsync.c  modeset.c
9_DRM_LubanCat/RGA_6_try_ctach/src/test/test_opencv/: video.cc
9_DRM_LubanCat/include/display/: drm_stitch.hh
9_DRM_LubanCat/src/display/drm_driver/: drm-core.c
9_DRM_LubanCat/src/display/drm_stitch/: drm_driver.cc  drm_stitch.cc
9_DRM_LubanCat/src/test/: 2_modeset-double-buffer.c  4_modeset-plane-test.c
9_DRM_LubanCat/src/test/test_opencv/: pic.cc
9_DRM_TEST_1/: CMakeLists.txt  README.md
9_DRM_TEST_1/include/: drm-core.h
9_DRM_TEST_1/src/test/: 1_modeset-single-buffer.c  3_modeset-page-flip.c  4_modeset-plane-test.c  5_modeset-atomic-crtc.c  libdrm_plane.c
9_DRM_TEST_1/src/test_pic/: main.c
9_DRM_TEST_2/: CMakeLists.txt  README.md
9_DRM_TEST_2/include/: drm-core.h  drm_driver.hh  drm_stitch.hh
9_DRM_TEST_2/src/drm_driver/: drm_driver.cc
9_DRM_TEST_2/src/drm_stitch/: drm-core.c  drm_driver.cc  drm_stitch.cc
9_DRM_TEST_2/src/test/: 1_modeset-single-buffer.c  2_modeset-double-buffer.c  6_modeset-atomic-plane.c
9_DRM_TEST_2/src/test_opencv/: drm-core.c
system_info_test/: system_info  system_info.cpp  system_info_README.md
